<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/topText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="Profile"

        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="418dp"
                    android:layout_height="110dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    android:src="@drawable/top_background" />


                <ImageView
                    android:id="@+id/imageprofile"
                    android:layout_width="149dp"
                    android:layout_height="132dp"
                    android:src="@drawable/image"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.509"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.545" />

                <Button
                    android:id="@+id/btncamera"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@android:color/transparent"
                    android:drawableTop="@drawable/icon_camera"
                    android:onClick="open_camera"
                    android:layout_marginTop="50dp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageprofile"
                    app:layout_constraintEnd_toEndOf="@+id/imageprofile"
                    app:layout_constraintStart_toEndOf="@+id/imageprofile"
                    app:layout_constraintTop_toTopOf="@+id/imageprofile"  />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/Home_name"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"

                    app:layout_constraintEnd_toEndOf="@+id/imageprofile"
                    app:layout_constraintStart_toStartOf="@+id/imageprofile"
                    app:layout_constraintTop_toBottomOf="@+id/imageprofile" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/study"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_background_1"
                        android:drawableStart="@drawable/male_icon_foreground"
                        android:drawablePadding="20dp"
                        android:paddingStart="2dp"
                        android:text="@string/gender"
                        android:textAlignment="viewStart"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        style="@android:style/Widget.Button"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_background_1"
                        android:drawableStart="@drawable/work_icon_foreground"
                        android:drawablePadding="20dp"
                        android:paddingStart="2dp"
                        android:text="@string/work"
                        android:textAlignment="viewStart" />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        style="@android:style/Widget.Button"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_background_1"
                        android:drawableStart="@drawable/phone_icon_foreground"
                        android:drawablePadding="20dp"
                        android:paddingStart="2dp"
                        android:text="@string/number"
                        android:textAlignment="viewStart" />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button4"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        style="@android:style/Widget.Button"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_background_1"
                        android:drawableStart="@drawable/mail_icon_foreground"
                        android:drawablePadding="20dp"
                        android:paddingStart="2dp"
                        android:text="@string/Gmail"
                        android:textAlignment="viewStart" />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button5"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="32dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        style="@android:style/Widget.Button"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/btn_background_1"
                        android:drawableStart="@drawable/location_icon_foreground"
                        android:drawablePadding="20dp"
                        android:paddingStart="2dp"
                        android:text="@string/address"
                        android:textAlignment="viewStart" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>